editor-components/call_to_action/call_to_action7/call_to_action7.module.scss
@use '../../../composer-base-components/base/utitilities/viewports.module.scss' as *;

@keyframes fadeInFromRight {
  0% {
    opacity: 0;
    transform: translateX(25%);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.container {
  position: relative;

  &::before {
    content: " ";
    position: absolute;
    top: 0px;
    left: 0px;
    background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
    height: 80%;
    width: 100%;
  }

  .max-content {
    position: relative;
    z-index: 1;

    .wrapper {
      gap: 0;

      .left-page {
        display: flex;

        .image-container {
          position: relative;
          width: 90%;

          &.no-content {
            width: 100%;
          }

          .image {
            width: 100%;
            height: 100%;
            border-radius: var(--composer-border-radius-sm);
            object-fit: cover;
            animation: fadeInFromRight 1s ease-out forwards;

            &.no-animation {
              animation: unset;
            }
          }

          .overlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background: var(--composer-overlay-color);
            z-index: 0;
            pointer-events: none;
            border-radius: var(--composer-border-radius-sm);
          }
        }
      }

      .right-page {
        .right-content {
          height: 100%;
          display: flex;
          flex-direction: column;
          justify-content: center;

          .title,
          .subtitle,
          .description {
            content: "";
          }

          .input-button-wrapper {
            width: 100%;
            display: flex;

            .input-div {
              display: flex;
              position: relative;

              .input {
                flex: 5;
                height: auto;
                border-style: none;
                outline: none;
                transition: border-color 0.3s ease;
                width: 100%;
                min-width: 400px;
                padding: var(--composer-gap-md);
                border-radius: var(--composer-border-radius-sm) 0 0 var(--composer-border-radius-sm);
                background-color: var(--composer-html-background);
                color: var(--composer-font-color-primary);

                &::placeholder {
                  font-size: 1rem;
                  color: var(--composer-font-color-primary);
                }

                &:focus::placeholder {
                  opacity: 0.5;
                }
              }

              .error {
                position: absolute;
                bottom: -20px;
                left: 0;
                color: var(--warning);
              }

              .button-container {
                display: flex;
                align-items: stretch;

                .button {
                  border-top-left-radius: 0;
                  border-bottom-left-radius: 0;
                  margin-top: 0;
                  height: 100%;

                  .button-text {
                    content: "";
                  }
                }
              }
            }
          }

          .button-container {
            display: flex;
            gap: var(--composer-gap-sm);
            justify-content: flex-start;
            flex-wrap: wrap;
          }
        }
      }
    }
  }

  &:not(.no-image) {
    .max-content {
      .wrapper {
        .right-page {
          .right-content {

            .title,
            .subtitle,
            .description {
              margin-left: 0;
              text-align: left;
            }
          }
        }
      }
    }
  }

  &.no-image {
    &::before {
      height: 100%;
    }

    .max-content {
      .wrapper {
        .right-page {
          .right-content {
            .input-button-wrapper {
              justify-content: var(--composer-content-alignment);

              .input-div {
                width: fit-content;
                max-width: 100%;
                min-width: 500px;
              }
            }

            .button-container {
              justify-content: var(--composer-content-alignment);
            }
          }
        }
      }
    }
  }

  &.only-image {
    .max-content {
      .wrapper {
        display: flex;
        justify-content: center;

        .left-page {
          .image-container {
            max-height: 600px;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    &.only-image {
      .max-content {
        .wrapper {
          .left-page {
            .image-container {
              max-height: 500px;
            }
          }
        }
      }
    }

    &.no-image {
      .max-content {
        .wrapper {
          .right-page {
            .right-content {
              .input-button-wrapper {
                .input-div {
                  width: 70%;
                  min-width: unset;
                }
              }
            }
          }
        }
      }
    }

    .max-content {
      .wrapper {
        flex-direction: row !important;

        .right-page {
          .right-content {
            .input-button-wrapper {
              .input-div {
                .input {
                  padding: 10px !important;
                }
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    &.only-image {
      .max-content {
        .wrapper {
          .left-page {
            .image-container {
              max-height: 400px;
            }
          }
        }
      }
    }

    &.no-image {
      .max-content {
        .wrapper {
          .right-page {
            .right-content {
              .input-button-wrapper {
                .input-div {
                  width: 100%;
                  min-width: unset;
                }
              }
            }
          }
        }
      }
    }

    &:not(.no-image) {
      .max-content {
        .wrapper {
          .right-page {
            .right-content {
              .subtitle {
                margin-left: 0;
                margin-right: 0;
                text-align: var(--composer-content-alignment);
              }

              .title,
              .description {
                text-align: var(--composer-content-alignment);
              }

              .input-button-wrapper {
                justify-content: var(--composer-content-alignment);
              }
            }
          }
        }
      }
    }

    .max-content {
      .wrapper {
        flex-direction: column !important;

        .right-page {
          order: 1;

          .right-content {
            .input-button-wrapper {
              .input-div {
                flex-direction: column !important;
                gap: var(--composer-gap-md);
                align-items: var(--composer-content-alignment);

                .input {
                  min-width: unset;
                  width: 100%;
                  background-color: var(--composer-html-background);
                  border-radius: var(--composer-border-radius-sm) !important;

                  &::placeholder {
                    color: var(--composer-font-color-primary);
                  }
                }

                .button-container {
                  width: 100%;
                  justify-content: var(--composer-content-alignment);

                  .button {
                    width: 100%;
                    border-radius: var(--composer-border-radius-sm) !important;
                  }
                }
              }
            }
          }
        }

        .left-page {
          order: 2;
        }
      }
    }
  }
}

